tests/for/fn_before_body copy.rz
for i in 4 fn foo() // error: missing block start '{' after 'for' condition